Bug 158869 - Configure Shortcuts dialog won't accept Alt+C, Alt+D, etc.
Summary: Configure Shortcuts dialog won't accept Alt+C, Alt+D, etc.
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-03-06 21:33 UTC by William Hilton
Modified: 2008-03-29 14:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description William Hilton 2008-03-06 21:33:50 UTC
Version:            (using KDE 4.0.2)
Installed from:    Ubuntu Packages
OS:                Linux

The standard "Configure Shortcuts" dialog used in KDE4 programs has a silly flaw. When I try to assign certain key combinations, the dialog intercepts them instead of assigning them. These shortcuts are Alt+D, which returns everything to their defaults, Alt+C, which is Cancel, Alt+O, which is OK, and Alt+E, which focuses the search dialog.

Test case: Open a Configure Shortcuts dialog (such as Dolphin's). Choose an action (such as About Dolphin). Click on the button to change the shortcut (text changes from "None" to "Input...") and type Alt+C. The dialog immediately closes! Re-opening the dialog shows that no shortcut was even assigned.

(This has been a bug since the 4.0 betas, so I was really surprised when I updated to 4.0.2 and it still wasn't fixed. Am I the only one who has tried assigning Alt+D to something?)
Comment 1 Sebastian Goth 2008-03-26 13:43:25 UTC
No you're not. Same problem exists for me and it even did before the betas.
Also using Kubuntu (exists in 7.10 and 8.04).

--Sebastian
Comment 2 Michael Jansen 2008-03-29 14:05:40 UTC
SVN commit 791406 by mjansen:

The shortcut 'alt+c' ( or any other dialog local action shortcut ) ended the recording and triggered the action associated with the action. In case of 'alt+c' ending the dialog.  It seems that those ShortcutOverride events get sent even if grabKeyboard() is active.

I would like to hear opinions if this is a qt bug or expected behavior.

BUG: 158869


 M  +16 -0     kkeysequencewidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=791406