The shortcut 'alt+c' ( or any other dialog local action shortcut ) ended the recording and triggered the action associated with the action. In case of 'alt+c' ending the dialog.  It seems that those ShortcutOverride events get sent even if grabKeyboard() is active.

I would like to hear opinions if this is a qt bug or expected behavior.

BUG: 158869

svn path=/trunk/KDE/kdelibs/; revision=791406